# midas-journal-726

Source/: README.txt
Source/gts/: CMakeLists.txt
Source/vtkSurfaceBooleanOperations/: CMakeLists.txt  example-usage.cxx  vtkSurfaceBooleanOperations.cxx  vtkSurfaceBooleanOperations.h  vtkSurfaceBooleanOperations_GUI.xml  vtkSurfaceBooleanOperations_SM.xml
